# wasmedge-http-rust-example

./: Cargo.toml  Dockerfile  Makefile  README.md  build.rs  build.sh
.github/workflows/: build.yml  install-wasmedge.sh
src/: main.rs  meta.rs
templates/: index.html
