[package]
name = "wasmedge-http-rust-example"
version = "0.1.0"
edition = "2021"

[dependencies]
askama = "0.12.1"
tokio_wasi = { version = "1.25.2", features = ["rt", "macros", "net", "time", "io-util"] }
warp_wasi = "0.3.3"

[build-dependencies]
tar = { version = "0.4.40", optional = true }
sha256 = { version = "1.5.0", optional = true }
log = { version = "0.4.20", optional = true }
env_logger = { version = "0.11.1", optional = true }
oci-spec = { version = "0.6.4", optional = true }
oci-tar-builder = { git = "https://github.com/containerd/runwasi.git", tag = "containerd-shim-wasmedge/v0.3.0", optional = true }
anyhow = { version = "1.0.79", optional = true }

[features]
default = []
oci-v1-tar = ["default", "tar", "sha256", "log", "env_logger", "oci-spec", "oci-tar-builder", "anyhow"]
